--- a/ultraship-backend/package.json
+++ b/ultraship-backend/package.json
@@ -11,10 +11,14 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "@apollo/server": "^5.2.0",
+    "@apollo/server": "^4.12.2",
+    "cors": "^2.8.5",
+    "express": "^5.2.1",
     "graphql": "^16.12.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
     "@types/node": "^25.0.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
