--- a/ultraship-backend/package.json
+++ b/ultraship-backend/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node --loader ts-node/esm src/index.ts"
+    "dev": "node --loader ts-node/esm src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +16,8 @@
     "@apollo/server": "^4.12.2",
     "cors": "^2.8.5",
     "express": "^5.2.1",
-    "graphql": "^16.12.0"
+    "graphql": "^16.12.0",
+    "serverless-http": "^4.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
