--- a/ultraship-backend/vercel.json
+++ b/ultraship-backend/vercel.json
@@ -1,6 +1,7 @@
 {
   "version": 2,
   "rewrites": [
-    { "source": "/graphql", "destination": "/api/index" }
+    { "source": "/graphql", "destination": "/api/index" },
+    { "source": "/", "destination": "/api/index" }
   ]
 }
